# wsb-ical-service

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  auth.rs  main.rs
src/api/: schedule.rs
