[package]
name = "wsb-ical-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
warp = "0.3"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31.0", features = ["bundled"] }
icalendar = { version = "0.16", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
scraper = "0.19"
